fix PHP bug #48791: open office files always reported as corrupted